--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
-  "type":"module",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -17,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "mern-chat-application": "file:..",
     "mongoose": "^8.13.2",
     "stream-chat": "^8.60.0"
   },
