--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@stream-io/video-react-sdk": "^1.21.1",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
+    "mern-chat-application": "file:..",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.3",
+    "stream-chat": "^9.19.0",
+    "stream-chat-react": "^13.6.4",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
